--- a/_posts/2023-11-04-smf.markdown
+++ b/_posts/2023-11-04-smf.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Sequence-to-Sequence Robotics Transformer 1 (RT-1)"
 date:   2023-11-04 11:35:38 +00:00
-image: /images/SMF_Schneider2020.png
+image: /images/SMF_Schneider2020.jpg
 categories: research
 authors: "Cédric Manouan"
 code: https://github.com/dric2018/smf_be
