--- a/_posts/2023-05-08-reba.markdown
+++ b/_posts/2023-05-08-reba.markdown
@@ -6,7 +6,7 @@ image: /images/reba.jpg
 categories: research
 authors: "<strong>Cédric Manouan</strong>, Moise Busogi"
 subtitle: "ML4EO"
-venue: CMU-Africa Week 2023, CMU (Pittsburgh, PA)
+venue: CMU-Africa Week 2023, Carnegie Mellon University (Pittsburgh, PA)
 poster: https://drive.google.com/file/d/12cCbEmuHsC-tbda2aZ4FO3l_jLwaxeUW/view
 video: https://www.youtube.com/watch?v=HybRwdt9z-c&ab_channel=CollegeofEngineering%2CCarnegieMellonUniversity
 ---
