Updated RDP Infosec project

--- a/_posts/2022-05-06-rdp.markdown
+++ b/_posts/2022-05-06-rdp.markdown
@@ -10,4 +10,4 @@ subtitle: "RDP"
 venue: CMU-Africa
 report: https://www.researchgate.net/publication/367038281_Remote_Desktop_Protocol_RDP_Flaws_Impact_on_African_Businesses_and_Mitigation_Techniques
 ---
-The purpose of this project is to outline RDP, identify its shortcomings, and assess their implications for African businesses. Additionally, the work aimed to offer practical suggestions for mitigating these issues, in order to foster a more conducive environment for sustainable economic growth and development in the region.
+This project outlines RDP, identifies its shortcomings, and assesses their implications for African businesses. The work aimed to offer practical suggestions for mitigating these issues, in order to foster a more conducive environment for sustainable economic growth and development in the region.
