--- a/_posts/2023-11-04-smf.markdown
+++ b/_posts/2023-11-04-smf.markdown
@@ -8,5 +8,7 @@ authors: "Cédric Manouan"
 code: https://github.com/dric2018/smf_be
 subtitle: "Behavioral Episode Model"
 venue: AI & Robotics Lab (CMU-Africa)
+report: https://dric2018.github.io
+
 ---
 A PyTorch re-implementation of RT-1 for the generation of actions represented as sequences of text tokens composed of the parameters to a CRAM generalized action plan.
