--- a/_posts/2023-12-31-smf.markdown
+++ b/_posts/2023-12-31-smf.markdown
@@ -8,7 +8,7 @@ authors: "Cédric Manouan"
 code: https://github.com/dric2018/smf_be
 subtitle: "Behavioral Episode Model"
 venue: AI & Robotics Lab (CMU-Africa)
-report: https://drive.google.com/file/d/1wamN9znyp3sEf71v_EXlHWi_hPfbX_qH/view?usp=drive_link
+report: https://dric2018.github.io/ #https://drive.google.com/file/d/1wamN9znyp3sEf71v_EXlHWi_hPfbX_qH/view?usp=drive_link
 
 ---
 A PyTorch re-implementation of RT-1 for the generation of actions represented as sequences of text tokens composed of the parameters to a CRAM generalized action plan.
