updated setup for github actions

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
 
 @misc{smfbe2023rt1cram,
   title={Robotics Transformer for CRAM (RT1-CRAM)},
-  author={Manouan, Cédric},
+  author={Manouan, Cédric, and Vernon, David},
   year={2023},
   month={12},
   preview={RT1-CRAM.jpg},
