added blog posts

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   month={11},
   preview={tbZindi.jpg},
   abbr={Competition},
-  html={https://zindi.africa/competitions/runmila-ai-institute-minohealth-ai-labs-tuberculosis-classification-via-x-rays-challenge/leaderboard},
+  website={https://zindi.africa/competitions/runmila-ai-institute-minohealth-ai-labs-tuberculosis-classification-via-x-rays-challenge/leaderboard},
   code={https://github.com/dric2018/ZindiTuberculosisClassification},
   abstract={The purpose of this challenge was strictly educational, involving the exploration of machine learning and deep learning techniques for the development of a model capable of classifying tuberculosis and normal X-ray results.}
 }
@@ -47,7 +47,8 @@ A PyTorch re-implementation of RT-1 for the generation of actions represented as
   month={6},
   preview={afretec.png},
   abbr={Research},
-  html={https://engineering.cmu.edu/afretec/research/index.html},
+  website={https://engineering.cmu.edu/afretec/research/index.html},
+  selected={true},
   abstract={
 In Africa, practical applications of speech technologies are scarce, often limited to adjusting pre-existing models. This project aims to overcome language barriers and enhance communication by developing innovative solutions that foster global understanding and inclusion. Key goals include establishing a data repository for several African languages, and developing speech and language models talored for local use cases.   }
 }
@@ -144,7 +145,7 @@ level of a selected regions in Rwanda (at the District or Province level).
   month={5},
   preview={RDPArch.jpg},
   abbr={Course Project},
-  html={https://www.researchgate.net/publication/367038281_Remote_Desktop_Protocol_RDP_Flaws_Impact_on_African_Businesses_and_Mitigation_Techniques},
+  website={https://www.researchgate.net/publication/367038281_Remote_Desktop_Protocol_RDP_Flaws_Impact_on_African_Businesses_and_Mitigation_Techniques},
   abstract={
     This project outlines RDP, identifies its shortcomings, and assesses their implications for African businesses. The work aimed to offer practical suggestions for mitigating these issues, in order to foster a more conducive environment for sustainable economic growth and development in the region.
   }
