--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -218,3 +218,18 @@ level of a selected regions in Rwanda (at the District or Province level).
   Contributed to the development of a deep learning model to recognize West African bank notes and coins.
   }
 }
+
+@misc{zindi2025ARC,
+  title={Hackade ARC Challenge: Africa},
+  author={Manouan, Cédric},
+  year={2025},
+  month={7},
+  preview={arcAGIAfrica.jpg},
+  abbr={Competition},
+  pdf={solution.pdf},
+  website={https://zindi.africa/competitions/the-arc-challenge-africa},
+  code={https://github.com/dric2018/zindi-arc-agi},
+  abstract={Built an LLM-based model that can solve puzzles presented in a modified version of the ARC-AGI dataset with about 32% accuracy. 
+  I ranked #10 and was selected as one of the official winners of the Zindi-sponsored flights to Deep Learning Indaba 2025.
+  }
+}
