adding lates research

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -233,3 +233,14 @@ level of a selected regions in Rwanda (at the District or Province level).
   I ranked #10 and was selected as one of the official winners of the Zindi-sponsored flights to Deep Learning Indaba 2025.
   }
 }
+
+@misc{AIinSSA2025,
+  title={AI Adoption in Sub-Saharan Africa: Choosing the Right Vehicles},
+  author={Manouan, Cédric and Anagbah, Miquilina and Douha, N'guessan Yves-Roland and Barros, João},
+  year={2025},
+  month={10},
+  preview={Africa_HPC_tracker.png},
+  abbr={Research},
+  pdf={AI_Adoption_in_SSA.pdf},
+  website={https://drive.google.com/file/d/1LCBtW9Pjj_4qj-Gejynd2_8N8BnhJeT7/view?usp=drive_link}
+}
